# badger2040test

./: CMakeLists.txt  readme.md  writedata.sh
src/: font.cpp  main.cpp
